--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,63 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <fragment
         android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <ImageButton
+            android:id="@+id/btnNorm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="changeMapType"
+            android:src="@drawable/baseline_map_24"
+            android:text="Normal" />
+
+        <ImageButton
+            android:id="@+id/btnSate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="changeMapType"
+            android:src="@drawable/baseline_satellite_alt_24"
+            android:text="Satelite" />
+
+        <ImageButton
+            android:id="@+id/btnTerr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="changeMapType"
+            android:src="@drawable/baseline_terrain_24"
+            android:text="Terreno" />
+
+        <Button
+            android:id="@+id/btnHibr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="changeMapType"
+            android:text="Hibrido" />
+
+        <Button
+            android:id="@+id/btnNone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="changeMapType"
+            android:text="Nada" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
